<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="logout">Logout</string>
    <string name="new_event">New Event</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="upcoming">Upcoming</string>
    <string name="empty_event">Empty event</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="organizer">Organizer</string>
    <string name="upload_event_thumbnail">Upload Event Thumbnail</string>
    <string name="submit_event">Submit Event</string>
    <string name="other_events">Other events</string>
    <string name="room_placeholder">Room 202</string>
    <string name="start_date_placeholder">Apr 20, 2026, 1:00 PM</string>
    <string name="organizer_placeholder">Innovation Hub</string>
    <string name="event_name_placeholder">Web Development Workshop</string>
    <string name="event_hub">Event Hub</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="logout_description_confirm">You will need to log in again to access your account.</string>
    <string name="cancel">Cancel</string>
</resources>