<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvEventHub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/event_hub"
                android:textSize="24sp"
                android:textStyle="bold" />

            <include
                android:id="@+id/upcomingEventLayout"
                layout="@layout/item_upcoming_event" />

            <TextView
                android:id="@+id/tvOtherEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:paddingTop="16dp"
                android:text="@string/other_events"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmptyEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/empty_event"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_anchorGravity="bottom">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="@android:color/white"
            android:padding="12dp"
            android:text="@string/logout"
            android:textColor="@android:color/black"
            app:icon="@drawable/ic_logout"
            app:iconGravity="textStart"
            app:iconPadding="8dp" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNewEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:padding="12dp"
            android:text="@string/new_event"
            android:textColor="@android:color/white" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
